--- a/example3_decomposition_genome_k_121.ipynb
+++ b/example3_decomposition_genome_k_121.ipynb
@@ -10,12 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2643b2be-0585-4d9c-97d6-e2ab0a735933",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
+    "import time\n",
     "import sys\n",
     "sys.path.insert(0, \"src\")\n",
     "from utility import *\n",
@@ -91,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "f9f685f5-201f-4d4a-8c3b-fff39f7dd822",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Prepare and use the biggest component\n",
     "verbose=False\n",
-    "filename=\"graph_bacteria\"\n",
+    "filename=\"output/graph_bacteria\"\n",
     "path=\"input/spneumoniae_k_121.unitigs.fa\"\n",
     "G_bacteria = generate_de_bruijn_graph_from_fa(path,verbose)\n",
     "save_graph_to_html(G_bacteria,filename+\"_de-Bruijn\")\n",
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "de3ddf5d-05dc-403e-a580-7fca3ee5e6ed",
    "metadata": {},
    "outputs": [],
@@ -128,12 +129,12 @@
     "    for edge in graphe.edges():\n",
     "        net.add_edge(edge[0], edge[1], color=colors[i])\n",
     "\n",
-    "net.write_html('sub_graphs_bacteria.html')"
+    "net.write_html('output/sub_graphs_bacteria.html')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "ff23b2b2-40c6-4fc3-8026-3af0783229e0",
    "metadata": {},
    "outputs": [],
@@ -170,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "b981833a-9925-41e8-8550-95d366f09ee8",
    "metadata": {},
    "outputs": [
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "96ef8504-a62e-4741-abec-11f2b6ca1e51",
    "metadata": {},
    "outputs": [],
@@ -321,14 +322,14 @@
     "        net.add_edge(edge[0], edge[1], color=\"#84B8D9\")\n",
     " # Optional: show physics options in the browser\n",
     "net.show_buttons(filter_=['physics'])\n",
-    "net.write_html('graph_genom_k_121_combi_paths.html')\n",
+    "net.write_html('output/graph_genom_k_121_combi_paths.html')\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "b5ef0ac8-fe16-401d-bd69-e6e42c5e5177",
    "metadata": {},
    "outputs": [],
@@ -385,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "af34c305-5c2c-4b08-8074-ef8834c3deee",
    "metadata": {},
    "outputs": [],
@@ -417,19 +418,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "30b73c1f-b568-4348-8046-1b15ca0e7d52",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'time' is not defined",
+     "ename": "NetworkXError",
+     "evalue": "The node 1061 is not in the digraph.",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m################## Essai global\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m start_time=\u001b[43mtime\u001b[49m.time() \u001b[38;5;66;03m# time of execution\u001b[39;00m\n\u001b[32m      3\u001b[39m k=\u001b[32m120\u001b[39m \u001b[38;5;66;03m# (k-1)mers\u001b[39;00m\n\u001b[32m      4\u001b[39m set_contigs=[]\n",
-      "\u001b[31mNameError\u001b[39m: name 'time' is not defined"
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.local/share/mamba/envs/cemracs2025/lib/python3.12/site-packages/networkx/classes/digraph.py:937\u001b[39m, in \u001b[36mDiGraph.successors\u001b[39m\u001b[34m(self, n)\u001b[39m\n\u001b[32m    936\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m937\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28miter\u001b[39m(\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_succ\u001b[49m\u001b[43m[\u001b[49m\u001b[43mn\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[32m    938\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "\u001b[31mKeyError\u001b[39m: '1061'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mNetworkXError\u001b[39m                             Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 58\u001b[39m\n\u001b[32m     55\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m gama \u001b[38;5;129;01min\u001b[39;00m list_gamma:\n\u001b[32m     56\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m alfa \u001b[38;5;129;01min\u001b[39;00m list_alpha:\n\u001b[32m     57\u001b[39m         \u001b[38;5;66;03m# Resulotion with Or-Tool\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m58\u001b[39m         xx,_=\u001b[43mopti_or_tool\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgraphe\u001b[49m\u001b[43m,\u001b[49m\u001b[43mstart_node\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnode_start\u001b[49m\u001b[43m,\u001b[49m\u001b[43mend_node\u001b[49m\u001b[43m=\u001b[49m\u001b[43mnode_end\u001b[49m\u001b[43m,\u001b[49m\u001b[43malpha\u001b[49m\u001b[43m=\u001b[49m\u001b[43malfa\u001b[49m\u001b[43m,\u001b[49m\u001b[43mbeta\u001b[49m\u001b[43m=\u001b[49m\u001b[43malfa\u001b[49m\u001b[43m,\u001b[49m\u001b[43mgamma\u001b[49m\u001b[43m=\u001b[49m\u001b[43mgama\u001b[49m\u001b[43m,\u001b[49m\u001b[43mdelta\u001b[49m\u001b[43m=\u001b[49m\u001b[32;43m10\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlimit_time\u001b[49m\u001b[43m=\u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[32m     60\u001b[39m         \u001b[38;5;66;03m#Construction of the output graph \u001b[39;00m\n\u001b[32m     61\u001b[39m         G_sub_graph=nx.DiGraph()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Documents/Work/project-CEMRACS2025/src/tools.py:209\u001b[39m, in \u001b[36mopti_or_tool\u001b[39m\u001b[34m(G, start_node, end_node, alpha, beta, gamma, delta, limit_time)\u001b[39m\n\u001b[32m    205\u001b[39m \u001b[38;5;66;03m# ---------------------\u001b[39;00m\n\u001b[32m    206\u001b[39m \u001b[38;5;66;03m# Contraintes pour fixer certaines variables\u001b[39;00m\n\u001b[32m    207\u001b[39m \u001b[38;5;66;03m#----------------------\u001b[39;00m\n\u001b[32m    208\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m start_node !=\u001b[33m\"\u001b[39m\u001b[33m\"\u001b[39m: \u001b[38;5;66;03m# start_node must be of degree 1\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m209\u001b[39m     successor_start_node=\u001b[38;5;28mlist\u001b[39m( \u001b[43mG\u001b[49m\u001b[43m.\u001b[49m\u001b[43msuccessors\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstart_node\u001b[49m\u001b[43m)\u001b[49m )\n\u001b[32m    210\u001b[39m     i_start=registre_edges_G[(start_node, successor_start_node[\u001b[32m0\u001b[39m] )]\n\u001b[32m    211\u001b[39m     model.Add(x[i_start]==\u001b[32m1\u001b[39m) \u001b[38;5;66;03m# x[edge_start] = 1\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.local/share/mamba/envs/cemracs2025/lib/python3.12/site-packages/networkx/classes/digraph.py:939\u001b[39m, in \u001b[36mDiGraph.successors\u001b[39m\u001b[34m(self, n)\u001b[39m\n\u001b[32m    937\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28miter\u001b[39m(\u001b[38;5;28mself\u001b[39m._succ[n])\n\u001b[32m    938\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[32m--> \u001b[39m\u001b[32m939\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m NetworkXError(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mThe node \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m is not in the digraph.\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n",
+      "\u001b[31mNetworkXError\u001b[39m: The node 1061 is not in the digraph."
      ]
     }
    ],
@@ -552,19 +559,7 @@
    "execution_count": null,
    "id": "79b7afe6-8b63-4740-896e-38d9d2fba552",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'end_time' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[19]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Time of execution\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mtime execution:\u001b[39m\u001b[33m\"\u001b[39m, \u001b[43mend_time\u001b[49m-start_time,\u001b[33m\"\u001b[39m\u001b[33msecondes\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mNameError\u001b[39m: name 'end_time' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Time of execution\n",
     "print(\"time execution:\", end_time-start_time,\"secondes\")"
